--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -2,33 +2,87 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000">
+    android:viewportWidth="2037.8109"
+    android:viewportHeight="2037.8109">
+  <group android:translateX="336.2388"
+      android:translateY="336.2388">
+    <group>
+      <clip-path android:pathData="m315.22,0c-92.34,-0 -175.41,39.7 -233.06,102.97l0,-0C31.12,158.99 0,233.47 0,315.22l0,-0 0,734.89C0,1224.2 141.13,1365.33 315.22,1365.33L315.22,1365.33L1050.11,1365.33C1224.2,1365.33 1365.33,1224.2 1365.33,1045.15l0,-0 0,-734.88C1365.33,141.13 1224.2,0 1050.11,0l0,-0z M 0,0"/>
+      <path
+          android:pathData="m315.22,0c-92.34,-0 -175.41,39.7 -233.06,102.97l0,-0C31.12,158.99 0,233.47 0,315.22l0,-0 0,734.89C0,1224.2 141.13,1365.33 315.22,1365.33L315.22,1365.33L1050.11,1365.33C1224.2,1365.33 1365.33,1224.2 1365.33,1045.15l0,-0 0,-734.88C1365.33,141.13 1224.2,0 1050.11,0l0,-0z"
+          android:strokeColor="#00000000">
         <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
+          <gradient 
+              android:startY="-326.8234"
+              android:startX="-326.5099"
+              android:endY="907.84607"
+              android:endX="908.15955"
+              android:type="linear"
+              android:tileMode="clamp">
+            <item android:offset="0" android:color="#FF585A5E"/>
+            <item android:offset="1" android:color="#FF1D1E22"/>
+          </gradient>
         </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+      </path>
+    </group>
+    <group>
+      <clip-path android:pathData="M0,0L1365.33,0L1365.33,1365.33L0,1365.33Z M 0,0"/>
+      <path
+          android:pathData="M273.44,576.69L273.44,273.44L576.69,273.44"
+          android:strokeAlpha="1"
+          android:strokeLineJoin="round"
+          android:strokeWidth="24.68700027"
+          android:fillColor="#00000000"
+          android:strokeColor="#f9fbfc"
+          android:strokeLineCap="round"/>
+      <path
+          android:pathData="M576.69,1091.89L273.44,1091.89L273.44,788.64"
+          android:strokeAlpha="1"
+          android:strokeLineJoin="round"
+          android:strokeWidth="24.68700027"
+          android:fillColor="#00000000"
+          android:strokeColor="#f9fbfc"
+          android:strokeLineCap="round"/>
+      <path
+          android:pathData="M788.64,273.44L1091.89,273.44L1091.89,576.69"
+          android:strokeAlpha="1"
+          android:strokeLineJoin="round"
+          android:strokeWidth="24.68700027"
+          android:fillColor="#00000000"
+          android:strokeColor="#f9fbfc"
+          android:strokeLineCap="round"/>
+      <path
+          android:pathData="M1091.89,788.64L1091.89,1091.89L788.64,1091.89"
+          android:strokeAlpha="1"
+          android:strokeLineJoin="round"
+          android:strokeWidth="24.68700027"
+          android:fillColor="#00000000"
+          android:strokeColor="#f9fbfc"
+          android:strokeLineCap="round"/>
+      <path
+          android:pathData="M415.43,521.13L949.91,521.13"
+          android:strokeAlpha="1"
+          android:strokeLineJoin="round"
+          android:strokeWidth="24.68700027"
+          android:fillColor="#00000000"
+          android:strokeColor="#f9fbfc"
+          android:strokeLineCap="round"/>
+      <path
+          android:pathData="M415.43,682.67L949.91,682.67"
+          android:strokeAlpha="1"
+          android:strokeLineJoin="round"
+          android:strokeWidth="24.68700027"
+          android:fillColor="#00000000"
+          android:strokeColor="#f9fbfc"
+          android:strokeLineCap="round"/>
+      <path
+          android:pathData="M415.43,844.2L949.91,844.2"
+          android:strokeAlpha="1"
+          android:strokeLineJoin="round"
+          android:strokeWidth="24.68700027"
+          android:fillColor="#00000000"
+          android:strokeColor="#f9fbfc"
+          android:strokeLineCap="round"/>
+    </group>
+  </group>
 </vector>
