--- a/app/src/main/res/layout/activity_view_quote.xml
+++ b/app/src/main/res/layout/activity_view_quote.xml
@@ -1,7 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/quote_fragment"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="com.example.quotecapture.ViewQuoteFragment" />
+    android:orientation="vertical"
+    tools:context=".ViewQuote">
 
+    <!-- TODO: Update blank fragment layout -->
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageButton
+            android:id="@+id/quotesBackButton"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:src="@drawable/ic_arrow_back_black_24dp"
+            android:layout_alignParentLeft="true"
+            android:background="@null"/>
+        <ImageButton
+            android:id="@+id/quotesDeleteButton"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:src="@drawable/ic_delete_black_24dp"
+            android:layout_toLeftOf="@id/quotesCopyButton"
+            android:background="@null"/>
+        <ImageButton
+            android:id="@+id/quotesCopyButton"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:src="@drawable/ic_content_copy_black_24dp"
+            android:layout_alignParentRight="true"
+            android:background="@null"/>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
+                <AutoCompleteTextView
+                    android:id="@+id/titleTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:layout_marginHorizontal="10dp"
+                    android:hint="@string/titleTxt"/>
+                <AutoCompleteTextView
+                    android:id="@+id/authorTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginVertical="5dp"
+                    android:hint="@string/authorTxt"/>
+                <EditText
+                    android:id="@+id/quoteText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginVertical="2dp"
+                    android:background="@null"
+                    android:inputType="textMultiLine"
+                    android:hint="@string/quote"/>
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_weight="1"
+        android:background="@color/colorBackground"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="0dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/image1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+            <ImageButton
+                android:id="@+id/quotesEditButton"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:src="@drawable/ic_mode_edit_black_24dp"
+                android:background="@null"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+
+</LinearLayout>
